# Scripts

./: README.md
AV/: FFmpeg常用命令.md  FFmpeg推多路udp_ts流脚本.md  FFmpeg调用GPU转码.md  FFprobe常用命令.md  windows编译FFmpeg.md  windows编译nginx.md
AV/常用脚本/: README.md  hls_download.py
Docker/: Docker容器配置独立IP.md
Docker/Compose/: Jellyfin.md  aria2-pro.md  cupsd.md  ollama.md  ollama大模型.md  openlist.md  qbittorrent.md  rclone.md  samba.md  subconverter.md  syncthing.md
Ethernet/: 梅林固件设置DHCP指定不同DNS与网关.md  网卡测速工具.md
Linux/: README.md  rp_filter设置.md  卸载LVM空间.md  性能相关命令.md  绑核相关.md  绑核相关命令.md  网络相关命令.md
Linux/CentOS/: CentOS7添加永久静态路由.md  CentOS7默认防火墙firewalld配置.md  网络优化.md  解决automake编译问题.md
Linux/Debian/: Debian启用bbr.md  Debian安装N卡环境.md  Debian完全禁止IPv6.md  Debian自动挂载硬盘.md  Debian设置静态IP地址.md  Debian部署smb服务器.md  Debian配置永久路由.md  Dibian部署smb服务器.md
Linux/Ubuntu/: Ubuntu设置静态IP地址.md
Linux/常用脚本/: README.md  check_python3.sh  cycle_run_stop.sh  disk_monitor.sh  isolate_core.sh  record_pid_top_stats.py  ssh_keep_alive.sh
Openwrt/: MosDNS配置指南.md  Nikki配置指南.md  Openclash配置指南.md  Openwrt旁路网关配置.md  Openwrt配置Wireguard客户端.md  README.md  smartdns在IPv6环境下分流设置.md  官方源码编译指南.md
Openwrt/Clash/: jav.list  rules_domain-list-community.ini  rules_domain_list_community.ini  rules_full.ini  rules_geox.ini  rules_ios_rule_script.ini  rules_mini.ini  rules_ruleset.ini  urlencode.html
Openwrt/Clash/List/: custom_direct.list  custom_proxy.list  jav.list  lan.list
Openwrt/Clash/domain-list-community/: custom-cloud  custom-cloud-cn  custom-netdisk  custom-porn  custom-proxy  custom_cloud_!cn  custom_cloud_cn  custom_netdisk_!cn  custom_netdisk_cn
Openwrt/常用脚本/: openclash_predownload.sh  proxy_predownload.sh  reality_checker.py  wireguard_check.sh
Other/: Markdown转html.md
Other/常用脚本/: README.md  check_tcp_port.py
Programming/: README.md  VisualStudio初始设置.md  gdb常用命令.md  python常用函数.md
Programming/Github脚本/: new_exe.bat  new_lib.bat
Programming/Git脚本/: clone_env.py  git_dir.bat  new_exe.bat  new_exe.py  new_lib.bat  new_lib.py
Programming/Git脚本/编译脚本/: rebuild.py
Programming/Git脚本/编译脚本/exe/: CMakeLists.txt  debug.sh  memcheck.sh  postbuild.py  prebuild.py  run.sh
Programming/Git脚本/编译脚本/exe/conf/: debug.sh  memcheck.sh  run.sh
Programming/Git脚本/编译脚本/lib/: CMakeLists.txt  postbuild.py  prebuild.py
Programming/IDE/: VisualStudio初始设置.md  VisualStudio安装特定版本.md
Programming/Svn脚本/: svn_up.sh  sync_svn.sh
Programming/Svn脚本/编译脚本/opensource/: autobuild.sh  autobuild_automake.sh  autobuild_cmake.sh
Programming/常用脚本/: README.md  generate_bom.py  generate_def.py  patch.sh  request_cyclically.py  trim_file.py
Programming/编译脚本/windows/: postbuild.bat  prebuild.bat
Ros/: Ros初始配置.md  Ros解决内网设备网关不一致时的访问问题.md  Ros配置Bond.md  Ros配置IPTV.md  Ros配置WireGuard.md  Ros配置分流大陆ip.md  Ros配置端口映射.md
Virtualization/DSM/: 群晖Docker容器配置独立IP.md
Virtualization/Pve/: Pve安装与设置.md  Pve导入硬盘镜像到虚拟机.md  Pve编译黑群晖.md  Pve配置ups.md  README.md
Virtualization/Unraid/: README.md  Unraid临时断开虚拟机网卡.md  Unraid安装N卡驱动.md  Unraid安装与设置.md  Unraid的docker自定义DNS.md  Unraid的docker设置.md  Unraid节能设置.md
Windows/: TotalCommander配置项.md  Windows添加路由.md
